# our-celery-manager

./: .gitignore  .gitlab-ci.yml  DEV_README.md  README.md  Settings.py  docker-compose.yml  main.py  requirements.txt  startup_checks.py  tasks_queue.py
api/: .gitignore  Dockerfile  MANIFEST.in  dev-requirements.in  dev-requirements.txt  pyproject.toml  requirements.in  requirements.txt
api/app/: Settings.py  __init__.py  main.py  startup_checks.py  tasks_queue.py  test_worker_app.py
api/app/models/task/: __init__.py
api/app/service/celery/: mapper.py  model.py  results.py
api/app/static/: index.html
api/app/static/assets/: index-03c7218f.js  index-3243bbd7.css  index-47c76819.js  index-4dd36308.js  index-90143e6f.js
api/migrations/: env.py
api/migrations/versions/: 2a917ca528e1_first_draft.py  4a7424b834ef_.py  4b3654f197de_2.py  84b471bec35d_first_draft_cloning_event_model.py  89c2b3ba6408_.py  98dba5c15e33_init.py  d3c4969ca5a9_.py  ea00ff9b8a90_.py  ea3f29edb363_.py
api/src/our_celery_manager/: db.py
api/src/our_celery_manager/app/: __init__.py  celery.py  db.py  main.py  ocm_worker.py  settings.py  startup_checks.py  tasks_queue.py  test_worker_app.py
api/src/our_celery_manager/app/cli/: __init__.py  db.py
api/src/our_celery_manager/app/models/: __init__.py  example.py
api/src/our_celery_manager/app/service/: ocm_taskmeta.py
api/src/our_celery_manager/app/static/: index.html
api/src/our_celery_manager/common/: settings.py
api/src/our_celery_manager/models/ocm/: __init__.py  clone.py
api/src/our_celery_manager/workers/: ocm.py  test.py
(+38 files in other folders)
