[project]
name = "our-celery-manager"
description = "Application to manage celery through backend"
dynamic = ["version"]
dependencies = [
    "pytz",
    "fastapi[all] ~= 0.9",
    "celery[redis,sqlalchemy] ~= 5.2",
    "sqlalchemy[pymysql] ~= 2.0",

    # Db drivers
    "psycopg2 ~= 2.9",
    "psycopg ~= 3.1",
]

[project.optional-dependencies]
dev = [ "types-pytz", "mypy", "black" ]
